<resources>
    <string name="app_name">PolyCoin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="polyInvest">ПолиКапитал</string>
    <string name="hello">Привет!</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="login">Логин</string>
    <string name="password">Пароль</string>

    <string name="coins">1054</string>

    <string name="loginExc">Войти</string>
    <string name="unifiedLoginExc">Войти по единой учетной записи</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="rating">Рейтинг</string>
    <string name="calendar">Календарь</string>
    <string name="event">Мероприятие</string>
    <string name="profile">Профиль</string>
    <string name="shop">Магазин</string>
    <string name="wallet">Кошелек</string>
    <string name="portfolio">Портфолио</string>

    <string name="name">Морозов Иван</string>
    <string name="group">310101/20001</string>
    <string name="inst_IKNT">ИКНТ</string>

    <string name="rate1">Управленческие навыки</string>
    <string name="rate2">Цифровая грамотность</string>
    <string name="rate3">Инициативность</string>

    <string name="score1">56%</string>
    <string name="score2">20%</string>
    <string name="score3">36%</string>

    <string name="filter">Фильтр</string>
    <string name="search">Поиск</string>

    <string name="remove_filter">Сбросить фильтры</string>
    <string name="inst_filter">Фильтр по институтам</string>
    <string name="inst">Институт</string>
    <string name="course">Курс</string>

    <string name="selected_date">Выбранная дата</string>

    <string name="event_desc">Описание:</string>
    <string name="event_level">Уровень:</string>
    <string name="event_date">Дата:</string>
    <string name="event_place">Место:</string>
    <string name="addFavorites">Добавить в избранное</string>
    <string name="event_balls">Баллы:</string>

    <string name="balance">Баланс</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="all">Все</string>
    <string name="scope_filter">Сфера деятельности</string>
    <string name="direction_filter">Направление подготовки</string>
    <string name="apply_filter">Применить фильтр</string>
</resources>