<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/poly_gradient"
        android:paddingTop="40px"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/polyUniLogo"
        android:layout_width="144dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/poly_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/polyInvestLogo"
        android:layout_width="158dp"
        android:layout_height="162dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/polyUniLogo"
        />
<!--        android:elevation="100dp" />-->

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/velasans_regular"
        android:text="@string/polyInvest"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/polyInvestLogo"
        />

<!--    <TextView-->
<!--        android:id="@+id/textview_first2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:fontFamily="@font/velasans_regular"-->
<!--        android:text="@string/hello"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="30sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.118"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textview_first" />-->

    <EditText
        android:id="@+id/LoginText"
        style="@style/Theme.EdiText.PolyInvest"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <EditText
        android:id="@+id/passwordText"
        style="@style/Theme.EdiText.PolyInvest"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/Theme.Button.PolyInvest"
        android:layout_width="311dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:paddingTop="10dp"
        android:text="@string/loginExc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/velasans_medium"
        android:text="@string/forgotPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/unifiedLoginButton"
        style="@style/Theme.Button.PolyInvest"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:paddingTop="10dp"
        android:text="@string/unifiedLoginExc"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>