<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    tools:context=".app.main.fragments.main.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/inst_filter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.90">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/block_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/velasans_medium"
            android:text="@string/filter"
            android:textColor="#000000"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="24dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="0.583" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inst_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/course_filter"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintVertical_weight="1.4">

        <View
            android:id="@+id/inst_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:background="@drawable/block_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <TextView
            android:id="@+id/instLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/velasans_medium"
            android:text="@string/inst"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/inst_view"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/instLabel">

            <LinearLayout
                android:id="@+id/inst_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/directionView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scope_filter"
        app:layout_constraintVertical_weight="6">


        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/block_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_direction_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_direction_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_direction_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/velasans_medium"
            android:text="@string/direction_filter"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_direction_3"
            app:layout_constraintStart_toStartOf="@+id/guideline_direction_2"
            app:layout_constraintTop_toTopOf="@+id/guideline_direction_1" />

        <Button
            android:id="@+id/applyFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:textColor="@color/white"
            android:text="@string/apply_filter"
            app:layout_constraintBottom_toBottomOf="@+id/view7"
            app:layout_constraintEnd_toStartOf="@+id/guideline_direction_3"
            app:layout_constraintStart_toStartOf="@+id/guideline_direction_2" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/applyFilter"
            app:layout_constraintEnd_toStartOf="@+id/guideline_direction_3"
            app:layout_constraintStart_toStartOf="@+id/guideline_direction_2"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <LinearLayout
                android:id="@+id/direction_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/scope_filter"
        app:layout_constraintTop_toBottomOf="@+id/inst_filter"
        app:layout_constraintVertical_weight="1.4">

        <View
            android:id="@+id/course_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:background="@drawable/block_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_course_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_course_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_course_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <TextView
            android:id="@+id/courseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/velasans_medium"
            android:text="@string/course"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_course_3"
            app:layout_constraintStart_toStartOf="@+id/guideline_course_2"
            app:layout_constraintTop_toTopOf="@+id/guideline_course_1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/course_view"
            app:layout_constraintEnd_toStartOf="@+id/guideline_course_3"
            app:layout_constraintStart_toStartOf="@+id/guideline_course_2"
            app:layout_constraintTop_toBottomOf="@+id/courseLabel">

            <TextView
                android:id="@+id/course_all"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:fontFamily="@font/velasans_medium"
                android:gravity="center"

                android:padding="5dp"
                android:text="@string/all"

                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/course_1"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:fontFamily="@font/velasans_medium"
                android:gravity="center"

                android:padding="5dp"
                android:text="@string/_1"

                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/course_2"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:fontFamily="@font/velasans_medium"
                android:gravity="center"

                android:padding="5dp"
                android:text="@string/_2"

                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/course_3"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:fontFamily="@font/velasans_medium"
                android:gravity="center"

                android:padding="5dp"
                android:text="@string/_3"

                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/course_4"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:fontFamily="@font/velasans_medium"
                android:gravity="center"

                android:padding="5dp"
                android:text="@string/_4"

                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/course_5"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:fontFamily="@font/velasans_medium"
                android:gravity="center"

                android:padding="5dp"
                android:text="@string/_5"

                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/course_6"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/border_style"
                android:fontFamily="@font/velasans_medium"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_6"

                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scope_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/directionView"
        app:layout_constraintTop_toBottomOf="@+id/course_filter"
        app:layout_constraintVertical_weight="1.4">

        <View
            android:id="@+id/scope_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:background="@drawable/block_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_scope_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_scope_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_scope_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <TextView
            android:id="@+id/scopeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/velasans_medium"
            android:text="@string/scope_filter"
            android:textColor="#000000"
            android:textSize="22sp"

            app:layout_constraintEnd_toStartOf="@+id/guideline_scope_3"
            app:layout_constraintStart_toStartOf="@+id/guideline_scope_2"
            app:layout_constraintTop_toTopOf="@+id/guideline_scope_1" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/scope_view"
            app:layout_constraintEnd_toStartOf="@+id/guideline_scope_3"
            app:layout_constraintStart_toStartOf="@+id/guideline_scope_2"
            app:layout_constraintTop_toBottomOf="@+id/scopeLabel">

            <LinearLayout
                android:id="@+id/scope_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>